test/pseudo-tty/test-fatal-error.out
*test-fatal-error.js:*
throw err;
^

TypeError: foobar
    at Object.<anonymous> (*test-fatal-error.js:*)
*[90m    at *(node:internal*loader:*:*)*[39m
*[90m    at *(node:internal*loader:*:*)*[39m
*[90m    at *(node:internal*loader:*:*)*[39m
*[90m    at *(node:internal*loader:*:*)*[39m
*[90m    at *[39m
*[90m    at *[39m {
  bla: *[33mtrue*[39m
}
